syntax = "proto3";
package rpcpb;
import "annotations.proto";

option go_package = "pb/api";
service ApiService {
  rpc GetNodeInfo (EmptyRequest) returns (NodeInfoResponse) {
    option(google.api.http) = {
      get: "/node/info"
    };
  }
}

message EmptyRequest {}
message NodeInfoResponse {
  bytes info = 1;
}